--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -307,7 +307,7 @@
                     </a>
                 </div>
                 <div class="nav-item">
-                    <a href="#" class="nav-link" onclick="showSection('shared-tasks')">
+                    <a href="#" class="nav-link" onclick="showSection('sharedTasks')">
                         <i class="bi bi-share"></i>
                         Shared Tasks
                     </a>
@@ -377,10 +377,11 @@
                     <h1><i class="bi bi-share"></i> Shared Tasks</h1>
                     <p>Tasks shared with you by other users</p>
                 </div>
-                <div class="empty-state">
-                    <i class="bi bi-share"></i>
-                    <h3>No shared tasks yet</h3>
-                    <p>Tasks shared with you will appear here</p>
+                <div id="sharedTasksContainer">
+                    <div class="loading-spinner">
+                        <i class="bi bi-arrow-clockwise spin"></i>
+                        <p>Loading shared tasks...</p>
+                    </div>
                 </div>
             </div>
 
@@ -442,6 +443,15 @@
                                 <option value="high">High</option>
                             </select>
                         </div>
+                        <div class="mb-3">
+                            <label for="taskStatus" class="form-label">Status</label>
+                            <select class="form-select" id="taskStatus">
+                                <option value="not_started" selected>Not Started</option>
+                                <option value="pending">Pending</option>
+                                <option value="in_progress">In Progress</option>
+                                <option value="completed">Completed</option>
+                            </select>
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
@@ -486,8 +496,9 @@
                         <div class="mb-3">
                             <label for="editTaskStatus" class="form-label">Status</label>
                             <select class="form-select" id="editTaskStatus">
+                                <option value="not_started">Not Started</option>
                                 <option value="pending">Pending</option>
-                                <option value="in-progress">In Progress</option>
+                                <option value="in_progress">In Progress</option>
                                 <option value="completed">Completed</option>
                             </select>
                         </div>
@@ -496,6 +507,72 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-primary" onclick="updateTask()">Update Task</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Share Task Modal -->
+    <div class="modal fade" id="shareTaskModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Share Task</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="shareTaskForm">
+                        <input type="hidden" id="shareTaskId">
+                        <div class="mb-3">
+                            <label for="shareWithUserId" class="form-label">Share with User ID</label>
+                            <input type="number" class="form-control" id="shareWithUserId" required
+                                placeholder="Enter user ID">
+                            <div class="form-text">Enter the ID of the user you want to share this task with</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="sharePermission" class="form-label">Permission Level</label>
+                            <select class="form-select" id="sharePermission">
+                                <option value="read">Read Only</option>
+                                <option value="write">Read & Write</option>
+                            </select>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" onclick="shareTask()">Share Task</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Comments Modal -->
+    <div class="modal fade" id="commentsModal" tabindex="-1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Task Comments</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="commentsContainer">
+                        <div class="loading-spinner">
+                            <i class="bi bi-arrow-clockwise spin"></i>
+                            <p>Loading comments...</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <form id="addCommentForm">
+                        <input type="hidden" id="commentTaskId">
+                        <div class="mb-3">
+                            <label for="newComment" class="form-label">Add Comment</label>
+                            <textarea class="form-control" id="newComment" rows="3"
+                                placeholder="Write your comment here..."></textarea>
+                        </div>
+                        <button type="button" class="btn btn-primary" onclick="addComment()">
+                            <i class="bi bi-chat-dots"></i> Add Comment
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
