--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -282,6 +282,54 @@
         .content-section.active {
             display: block;
         }
+
+        /* Notification Styles */
+        .notification-item {
+            background: white;
+            border-radius: 10px;
+            padding: 1rem;
+            margin-bottom: 1rem;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+            transition: all 0.3s ease;
+        }
+
+        .notification-item:hover {
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transform: translateY(-2px);
+        }
+
+        .notification-item.unread {
+            border-left: 4px solid #ffc107;
+            background-color: #fffbf0;
+        }
+
+        .notification-item.read {
+            border-left: 4px solid #6c757d;
+            opacity: 0.8;
+        }
+
+        .notifications-list {
+            max-height: 600px;
+            overflow-y: auto;
+        }
+
+        /* User Management Styles */
+        .user-item {
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+            transition: all 0.3s ease;
+        }
+
+        .user-item:hover {
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transform: translateY(-2px);
+        }
+
+        .users-list {
+            max-height: 600px;
+            overflow-y: auto;
+        }
     </style>
 </head>
 
@@ -391,10 +439,11 @@
                     <h1><i class="bi bi-bell"></i> Notifications</h1>
                     <p>Stay updated with your task activities</p>
                 </div>
-                <div class="empty-state">
-                    <i class="bi bi-bell"></i>
-                    <h3>No notifications</h3>
-                    <p>You're all caught up!</p>
+                <div id="notificationsContainer">
+                    <div class="loading-spinner">
+                        <i class="bi bi-arrow-clockwise spin"></i>
+                        <p>Loading notifications...</p>
+                    </div>
                 </div>
             </div>
 
@@ -404,10 +453,11 @@
                     <h1><i class="bi bi-people"></i> User Management</h1>
                     <p>Manage platform users (Admin only)</p>
                 </div>
-                <div class="empty-state">
-                    <i class="bi bi-people"></i>
-                    <h3>User management</h3>
-                    <p>Admin features coming soon</p>
+                <div id="usersContainer">
+                    <div class="loading-spinner">
+                        <i class="bi bi-arrow-clockwise spin"></i>
+                        <p>Loading users...</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -573,6 +623,45 @@
                             <i class="bi bi-chat-dots"></i> Add Comment
                         </button>
                     </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Edit User Modal -->
+    <div class="modal fade" id="editUserModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit User Role</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="editUserForm">
+                        <input type="hidden" id="editUserId">
+                        <div class="mb-3">
+                            <label for="editUsername" class="form-label">Username</label>
+                            <input type="text" class="form-control" id="editUsername" required readonly>
+                            <div class="form-text">Username cannot be changed</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editUserEmail" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="editUserEmail" required readonly>
+                            <div class="form-text">Email cannot be changed</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editUserRole" class="form-label">Role</label>
+                            <select class="form-select" id="editUserRole">
+                                <option value="user">User</option>
+                                <option value="admin">Admin</option>
+                            </select>
+                            <div class="form-text">Change the user's role and permissions</div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" onclick="updateUserRole()">Update Role</button>
                 </div>
             </div>
         </div>
